--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -37,7 +37,13 @@
 	</section>
 	<section id="portfolio">
 		<h2>Mes Projets</h2>
-		<div class="gallery"></section>
+		<div class="filters">
+			<button>Tous</button>
+			<button>Objets</button>
+			<button>Appartements</button>
+			<button>Hotels & restaurants</button>
+		</div>
+		<div class="gallery"></div></section>
 	<section id="contact">
 		<h2>Contact</h2>
 		<p>Vous avez un projet ? Discutons-en !</p>
