--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -38,10 +38,10 @@
 	<section id="portfolio">
 		<h2>Mes Projets</h2>
 		<div class="filters">
-			<button>Tous</button>
-			<button>Objets</button>
-			<button>Appartements</button>
-			<button>Hotels & restaurants</button>
+			<button id="btn-tous">Tous</button>
+			<button id="btn-objets">Objets</button>
+			<button id="btn-appartements">Appartements</button>
+			<button id="btn-hotels">Hotels & restaurants</button>
 		</div>
 		<div class="gallery"></div></section>
 	<section id="contact">
