Ajout des filtres en Dynamique ainsi que du token pour se connecter

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -18,7 +18,7 @@
 		<ul>
 			<li>projets</li>
 			<li>contact</li>
-			<li><a href="/FrontEnd/login.html">login</a></li>
+			<li><a id="loginLink" href="/FrontEnd/login.html">login</a></li>
 			<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
 		</ul>
 	</nav>
@@ -37,13 +37,9 @@
 	</section>
 	<section id="portfolio">
 		<h2>Mes Projets</h2>
-		<div class="filters">
-			<button id="btn-tous">Tous</button>
-			<button id="btn-objets">Objets</button>
-			<button id="btn-appartements">Appartements</button>
-			<button id="btn-hotels">Hotels & restaurants</button>
-		</div>
-		<div class="gallery"></div></section>
+		<div class="filters"></div>
+		<div class="gallery"></div>
+	</section>
 	<section id="contact">
 		<h2>Contact</h2>
 		<p>Vous avez un projet ? Discutons-en !</p>
