--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -10,6 +10,7 @@
 	<meta name="description" content="">
 	<link rel="stylesheet" href="./assets/login.css">
 	<script src="/FrontEnd/index.js"></script>
+	<script src="/FrontEnd/login.js"></script>
 </head>
 <body>
 <header>
@@ -31,7 +32,7 @@
 			<input type="email" name="email" id="email" required>
 			<label for="password">Mot de passe</label>
 			<input name="password" id="password" required></input>
-			<input type="submit" value="Se connecter">
+			<input type="submit" value="Se connecter" class="click">
 			<a href="#" class="forgotpassword">Mot de passe oublié</a>
 		</form>
 	</section>
