--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -52,7 +52,16 @@
 			<h2>Mes Projets</h2>
 			<div class="projets">
 				<img src="/FrontEnd/assets/images/Group.png">
-				<p>modifier</p>
+				<button id="btn-modifier" class="btn-modifier">modifier</button>
+			</div>
+			<div id="modal" class="modal">
+				<div class="modal-content">
+					<span id="close-modal" class="close">&times;</span>
+					<h2>Galerie Photo</h2>
+					<div class="modal-body"></div>
+					<div class="line"></div>
+					<button class="add-photo-btn">Ajouter une photo</button>
+				</div>
 			</div>
 			<div class="filters"></div>
 			<div class="gallery"></div>
