Ajout de la deuxième modale

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -55,12 +55,20 @@
 				<button id="btn-modifier" class="btn-modifier">modifier</button>
 			</div>
 			<div id="modal" class="modal">
-				<div class="modal-content">
+				<div class="modal-content" id="modal-gallery">
 					<span id="close-modal" class="close">&times;</span>
 					<h2>Galerie Photo</h2>
 					<div class="modal-body"></div>
 					<div class="line"></div>
 					<button class="add-photo-btn">Ajouter une photo</button>
+				</div>
+				<div id="modal-add-content" class="modal-add-content">
+					<span id="back-to-gallery" class="back-arrow">←</span>
+					<span id="close-gallery" class="close">&times;</span>
+					<h2>Ajout Photo</h2>
+					<div class="modal-body-content"></div>
+					<div class="line"></div>
+					<button class="valider">Valider</button>
 				</div>
 			</div>
 			<div class="filters"></div>
