Finition du Formulaire + pas de rechargement de pages à l'ajout et suppression

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -68,7 +68,8 @@
 					<h2>Ajout Photo</h2>
 					<div class="modal-body-content"></div>
 					<div class="line"></div>
-					<button class="valider">Valider</button>
+					<button class="valider" type="submit">Valider</button>
+					<button class="valider-inactive" type="submit">Valider</button>
 				</div>
 			</div>
 			<div class="filters"></div>
