--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -32,6 +32,7 @@
 			<input type="email" name="email" id="email" required>
 			<label for="password">Mot de passe</label>
 			<input name="password" id="password" required></input>
+			<p id="error"></p>
 			<input type="submit" value="Se connecter" class="click">
 			<a href="#" class="forgotpassword">Mot de passe oublié</a>
 		</form>
