Mise en place du token pour les modals

--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -31,7 +31,7 @@
 			<label for="email">Email</label>
 			<input type="email" name="email" id="email" required>
 			<label for="password">Mot de passe</label>
-			<input name="password" id="password" required></input>
+			<input name="password" type="password" id="password" required></input>
 			<p id="error"></p>
 			<input type="submit" value="Se connecter" class="click">
 			<a href="#" class="forgotpassword">Mot de passe oublié</a>
